@0.8 reverted changes from r8115
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8117 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -8,22 +8,22 @@ foxtrick.ForumTemplates.desc=Allows turning forum posts into templates for later
 foxtrick.ForumPreview.desc=Allows showing a post preview (Also works for mails)
 foxtrick.AddLeaveConfButton.desc=Adds a 'Leave forum' button to each forum folder
 foxtrick.StarsCounter.desc=Adds the total number of stars to the match lineup page
-
+foxtrick.RepositionedPlayers.desc=Highlights repositioned players at lineup page
 foxtrick.MoveLinks.desc=Moves the manager's league and flag links to the message header. Note: the 'Show avatar' function in Hattrick must be switched on for this to work!
 #AttVsDef
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
-
+foxtrick.AttVsDef.oldstyleifkseperated.desc=old style (separated ind. freekicks)
 #Ratings
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
-
+foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
 
-
-
+foxtrick.FlipSidesInMatchOrders.desc=Allows quick flipping of pitch sides on match orders page
+foxtrick.FormationBoxInMatchOrders.desc=Displays a box with current formation on match orders page
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
 foxtrick.TransferSearchFilters.desc=Allows for transfer list search filter templates
 foxtrick.TransferDeadline.desc=Adds an extra line to each searchresult on the transfermarket with days, hours and minutes until transfer ends
@@ -33,11 +33,11 @@ foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links whe
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums. In the text boxes you can define an own style (HTML style attribute).
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail)
-
+foxtrick.ShowMessageButton.desc=Adds a 'Send Message' button to the manager page
 foxtrick.CopyPostID.desc=Copy PostId to clipboard instead of just showing on forum page
-
-
-
+foxtrick.AlltidFlags.desc=Adds Alltid flags and links of both posters on forum page
+foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link first to Hattrick's league page, if (hidden) manager avatar is on
+foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link first to Alltid's league page
 foxtrick.LinksLeague.desc=Adds some external links to the league page
 foxtrick.LinksTeam.desc=Adds some external links to the team page
 foxtrick.LinksCountry.desc=Adds some external links to the country page
@@ -51,23 +51,23 @@ foxtrick.LinksMatch.desc=Adds some external links to the match page
 foxtrick.LinksTraining.desc=Adds some external links to the training page
 foxtrick.LinksAlliances.desc=Adds some external links to the alliance page
 foxtrick.LinksNational.desc=Adds some external links to the national team page
-
+foxtrick.TruncateLongNicks.desc=Only shows the first 9 characters of long user names in forum posts
 foxtrick.AddDefaultFaceCard.desc=Adds a default face card to forum posts of users who didn't specify one
 foxtrick.OriginalFace.HideTransfer.desc=Shows the normal face card of transferlisted players
 foxtrick.OriginalFace.HideInjury.desc=Shows the normal face card of injured players
 foxtrick.OriginalFace.HideSuspended.desc=Shows the normal face card of suspended players
 foxtrick.OriginalFace.ColouredYouth.desc=Shows the youth face cards in full color
-
-
+foxtrick.ConfirmPlayerBid.desc=Shows a confirmation box for bidding.
+foxtrick.TwoWeekBalance.desc=Display the Two weeks difference/balance on the Finance page
 foxtrick.PersonalityImages.desc=Add coloured numbers for popularity, character and psyche on the player page
 foxtrick.HideSignatures.desc=Hide the signatures in forum posts, display a 'Signature' link instead
 foxtrick.ForumNextAndPrevious.desc=Remove the 'Next' and 'Previous' buttons on forum threads if they are disabled
-
+foxtrick.AdvancedStarsCounter.desc=Adds more detailed stars statistics to the match line-up page.
 foxtrick.MatchPlayerColouring.desc=Colors the players depending on their team in the match report.
 foxtrick.ForumRedirManagerToTeam.desc=Redirect links from manager page to user page on forum links
-
-
-
+foxtrick.ForumAnchors.desc=Adds a 'Goto Top' link to each post header
+foxtrick.ManagerButtons.addGuestbooklink.desc=Adds Send Message and Write in Guestbook buttons to manager page
+foxtrick.ConfirmTL.desc=Adds player transferlist confirm box
 foxtrick.HTThreadMarker.desc=Marks threads created by HTs
 foxtrick.TeamStats.desc=Compiles an overview of team.
 foxtrick.LargeFlags.desc=Replaces the tiny country flag on player pages with a large one
@@ -81,14 +81,14 @@ foxtrick.SeniorTeamShortCuts.AllPages.desc=Show on all pages
 foxtrick.FixcssProblems.desc=Fixes some Problems of wrong HT css styles
 #ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Displays some helpful information in the player details
-
-
+foxtrick.FixcssProblems.Forum_Hover_Links.desc=Fixes the problem of white links on mouseover in Forums
+foxtrick.FixcssProblems.Forum_Post_Header.desc=Fixes the problem of missing date and time on forum post headers
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Fixes cut of long teamnames on left menu
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Fixes invisible FoxLink images in posting headers
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Fixes jumping page when no scrollbar is shown
-
-
-
+foxtrick.FixcssProblems.Forum_Header_Smallsize.desc=Sets the font size of posting headers to 10px and removes some gaps
+foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Fixes the problem of displaced Selectboxes on lineup page
+foxtrick.GuestbookAlltidFlags.desc=Adds Alltid flags to users in guestbook
 foxtrick.SkinPlugin.desc=Adds your own CSS skin to hattrick
 foxtrick.CurrencyConverter.desc=Converting a HT currency
 foxtrick.MovePlayerStatement.desc=Moves player statements to the players image. If images are disabled, the statements will be removed.
@@ -99,14 +99,14 @@ foxtrick.ExtraShortcuts.desc=Adds a Link to supporter statistics to the main ico
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page
 
 #MatchReportTweaks
-
-
-
+foxtrick.MatchPlayerColouring.MyTeam.desc=My Team
+foxtrick.MatchPlayerColouring.Home.desc=Home
+foxtrick.MatchPlayerColouring.Away.desc=Away
 
 #economyDifference
 #strings are shown as additional information on table headder on finances page ans also on pref. dialog radio option!
-
-
+foxtrick.TwoWeekBalance.plus.desc=plus
+foxtrick.TwoWeekBalance.minus.desc=minus
 
 #icons
 foxtrick.ExtraShortcuts.statistics=statistics
@@ -116,8 +116,8 @@ foxtrick.links.boxheader=Links
 
 #teamstats
 foxtrick.TeamStats.label=Team overview
-
-
+foxtrick.TeamStats.countries.label=Country overview
+foxtrick.TeamStats.totalTSI.label=TOTAL TSI
 
 #gotoPostBox
 button.go=goto
@@ -144,7 +144,7 @@ ForumYouthIcons.youthteamid=link to youth team
 ForumYouthIcons.youthmatchid=add link to youth match
 ForumYouthIcons.youthseries=add link to youth series
 #special bbcode, not really youth icons
-
+ForumSpecialBBCode.hr=add horizontal line
 ForumSpecialBBCode.br=add line brake
 ForumSpecialBBCode.user=add userid
 ForumSpecialBBCode.article=add articleid
@@ -192,87 +192,87 @@ Set_pieces=Set pieces
 Stamina=Stamina
 
 #Skills
+weak=weak
 
-
-
-
-
-
-
-
-
+foxtrick.menu.savefilter=Save filter
+foxtrick.menu.removefilter=Remove filter
+foxtrick.menu.selectfiltername=Select filter name:
+foxtrick.menu.removeallfilters=Remove all
+foxtrick.matchlineup.totalstars=Total number of stars:
+foxtrick.shortcuts.matchlineup=Shortcut to the match lineup page
+foxtrick.shortcuts.leaveconference=Leave forum shortcut
 #matchdetail
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
 foxtrick.matchdetail.defence=Defence
 foxtrick.shortcut.matchlineup=lineup
-
-
+foxtrick.tweaks.nolinkstorules=Display skill levels as text, not as hypertext links
+foxtrick.tweaks.hideteamlinksintransferlist=No team links in transfer list (text only)
 
 # as in 2,3,4 stars
-
-
-
-
-
-
-
-
-
+foxtrick.prefs.stars=stars
+foxtrick.prefs.mergemoderec=merge mode recommended
+foxtrick.tweaks.bookmarknotescoloring=Color bookmark notes by importance. Tags to use:
+foxtrick.tweaks.flipsides=Flip sides button in match orders page
+foxtrick.matchorders.flipsides=Flip sides
+foxtrick.matchorders.formation=Formation
+foxtrick.matchorders.formationcds=CD
+foxtrick.matchorders.formationims=IM
+foxtrick.matchorders.formationforwards=FWD
 foxtrick.matchdetail.right=Right
 foxtrick.matchdetail.center=Center
 foxtrick.matchdetail.left=Left
-
+foxtrick.matchdetail.moregraphs=More graphs
 foxtrick.matchdetail.rightshort=R
 foxtrick.matchdetail.centershort=C
 foxtrick.matchdetail.leftshort=L
 foxtrick.matchdetail.ifkshort=I
-
-
-
+foxtrick.tweaks.addskilllevelnumbertooltips=Add skill level number tooltips.
+foxtrick.tweaks.characterspresentation=Visual presentation of personality (agreeability, honesty, aggressivity)
+foxtrick.tweaks.bookmarksnotesdisplay=Display bookmarked players comments in the bookmarks list
 foxtrick.bidconfirmation=Do you wish to bid for this player? The price is %s.
 foxtrick.tlconfirmation=Do you wish to transfer list this player? The asking price is %s.
-
-
-
+foxtrick.tlwarning=Hattrick wants you to set a transfer list for players. Choose one from dropdown menu
+foxtrick.tweaks.bidconfirmation=Player bid confirmation box
+foxtrick.tweaks.tlconfirmation=Transfer list player confirmation box
 foxtrick.MatchIncome.desc=Match income in match details page
-
+foxtrick.tweaks.signaturetoggle=Hide signatures in forums. Show signature display link.
 foxtrick.conferences.signaturetoggle=Signature
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+foxtrick.tweaks.playerliststats=Player list stats (TSI, age)
+foxtrick.tweaks.goaldifference=Goal difference in league table
+foxtrick.tweaks.matchdetailplayercoloring=Player colors in match details page
+foxtrick.tweaks.flagsincountrieslist=Flags in list of countries (menu)
+foxtrick.playertransfercompare.avgprice=Average price
+foxtrick.tweaks.transfercompareaverageprice=Average price in transfer compare
+foxtrick.tweaks.formationconfirmation=Formation confirmation box
+foxtrick.formationconfirmation=Are you sure you want to set the %s formation ?
+foxtrick.tweaks.serieshistorygraphlabel=Series history graph
+foxtrick.tweaks.serieshistorygraph1=Series history graph (autoshow)
+foxtrick.tweaks.serieshistorygraph2=Series history graph (display on click)
+foxtrick.tweaks.economicaldifference=Week economical difference
+foxtrick.economicaldifference.diff=Week difference
+foxtrick.economicaldifference.expecteddiff=Expected difference
+foxtrick.playerliststats.weeks=weeks
+foxtrick.playerliststats.stats=Stats
+foxtrick.playerliststats.tsi=TSI
+foxtrick.playerliststats.age=age
+foxtrick.playerliststats.form=form
+foxtrick.playerliststats.exp=exp
+foxtrick.playerliststats.stamina=stamina
+foxtrick.tweaks.playerdetailcountryflag=Country flag in player detail page
+foxtrick.tweaks.gregoriantoht=Attach Hattrick week/season information to dates
+foxtrick.tweaks.specialistscost=Specialists cost
+foxtrick.tweaks.flagsinconferences=Attach country flags to users in the forums
+foxtrick.tweaks.colorstaffnicksinconferences=Color Hattrick officials nicks in the forums
+foxtrick.economicaldifference.balance=Two week difference/balance
+foxtrick.tweaks.teampopuplinks=Popup team shortcut menus
+foxtrick.tweaks.flagscounter=Add flag counter
+foxtrick.tweaks.transfercomparemedianprice=Display median price in transfare compare
+foxtrick.playertransfercompare.medianprice=Median Price
+foxtrick.tweaks.forummessagetemplates=Forum message templates
+foxtrick.tweaks.flagsinplayerbackground=Country flag in player face background
+foxtrick.tweaks.teamlogobelow=Fix for large team logo display
+foxtrick.tweaks.mapofvisitedcountries=Map of visited countries (flag collection page)
 
 foxtrick.tweaks.selectplayer=Select player
 foxtrick.linkscustom.selecticon=Select icon
@@ -295,16 +295,16 @@ Coach=Coach
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Actions
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
-
-
-
+foxtrick.tweaks.overview=Overview
+foxtrick.tweaks.Really_bid=Really bid?
+foxtrick.tweaks.twoweekbalance=Two weeks difference/balance
 foxtrick.tweaks.writeinguestbook=Write in Guestbook
-
+foxtrick.tweaks.recentvisitors=Recent visitors
 foxtrick.tweaks.copyplayerad=Copy player ad to clipboard
 foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
-
-
-
+foxtrick.tweaks.bornin=Born in
+HatStatsDetailed=HatStats (detailed)
+HatStatsTotalOnly=HatStats (total only)
 
 #matches
 foxtrick.matches.attackdefensebars=Attack vs Defense bars
@@ -317,22 +317,22 @@ foxtrick.matches.indfreekick=Ind. free kick
 foxtrick.matches.wronglang=Foxtrick: The stats cannot be displayed because your language is not registered or because you've set the wrong language in preferences. Please make sure your Foxtricklanguage is the same as your Hattricklanguage.
 # NOTE TO TRANSLATORS
 # Look on a lineup from a played match. The Positions are marked with 2-3 letters
-
-
-
-
-
-
-
-
+foxtrick.matches.Keeper=GK
+foxtrick.matches.LeftBack=LB
+foxtrick.matches.CentralDefender=CD
+foxtrick.matches.RightBack=RB
+foxtrick.matches.Leftwinger=LW
+foxtrick.matches.InnerMidfield=IM
+foxtrick.matches.Rightwinger=RW
+foxtrick.matches.Forward=FW
 #NOTE TO TRANSLATORS
 # Look on a lineup from a played match. The text is shwon as mouse over title on a repositioned player i.e: 'repositioned player (CD)'
-
+foxtrick.matches.RepositionedPlayers.titel=repositioned player
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 foxtrick.matches.suppstats=Supporter Statistics
-
+foxtrick.matches.soldseats=Sold seats
 
 
 Team=Team
@@ -385,19 +385,19 @@ tab.about=About
 foxtrick.prefs.captionHTLanguage=Language settings
 foxtrick.prefs.captionHTDateformat=Dateformat settings
 foxtrick.prefs.captionHTCountry=Country settings
-
+foxtrick.prefs.captionShowOnStatusBar=Display status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 
 
 #statusbarpref
-
-
-
-
-
-
-
+foxtrick.prefs.statusbarpref=Enable (requires restart)
+foxtrick.prefs.captionAlertSettings=Alert settings
+foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
+foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=Show growl notification (Mac only)
+foxtrick.FoxtrickAlert.AlertSound.desc=Play alert sound
+foxtrick.prefs.buttonSelectFile=Select sound file
+foxtrick.prefs.buttonTest=Test
 foxtrick.prefs.labelCleanupBranch=Restore default Foxtrick settings (requires restart)
 foxtrick.prefs.labelDisableAll=Disables all Foxtrick modules
 foxtrick.prefs.labelSavePrefs=Export foxtrick preferences
@@ -407,20 +407,20 @@ foxtrick.prefs.stagepref=Disable Foxtrick on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable Foxtrick temporary
 
 button.save=Save
-
+foxtrick.prefs.buttonCancel=Cancel
 button.restoreDefault=Restore defaults
 button.disableAll=Disable all
 button.export=Save
 button.import=Load
-
-
-
+foxtrick.prefs.captionSkinSettings=Custom hattrick CSS skin
+foxtrick.prefs.skinButtonSelectFile=Select CSS file
+foxtrick.prefs.activeSkin=Activated skin
 
 delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
 
 #status bar menu
 foxtrick.prefs.preferences=Preferences
-
-
+foxtrick.menu.configurefoxtrick=Configure FoxTrick
+foxtrick.menu.reloadfoxtrick=Reload FoxTrick (for developers)
 ###EOF
