--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -29,30 +29,30 @@ foxtrick.AttVsDef.oldstyleifkseparated.desc=stari stil (odvojeni indirektni udar
 #Ratings
 foxtrick.Ratings.desc=Dodaje ocjene na stranici utakmice
 foxtrick.BookmarkAdjust.desc=Mijenja ikonu vezanu za zabilješke u označenim napomenama sa kodom u velikoj zagradi: npr. [tirkizna] će pokazati tirkiznu ikonu. Moguće vrijednosti: akva tirkizna, B, crna, plava, smeđa, tirkizna, tamnoljubičasta, zelena, idea, svijetloplava, svijetlozelena, naranđasta, roze, ljubičasta, crvena, bijela, žuta
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+foxtrick.FoxtrickAlert.desc=Prikazuje prozorčić s HT novostima, čak i kada radite nešto drugo u tom momentu. (Također daje i zvučno obavještenje za događaje iz teleksa)
+foxtrick.FoxtrickAlert.AlertSlider.desc=Prikazuje klizač obavještenja
+foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=Označava obavještenje režanjem (samo za Mac)
+foxtrick.FoxtrickAlert.AlertSound.desc=Uključi zvuk obavještenja
+foxtrick.FoxtrickAlert.NewMail.desc=Prikazuje prozorčić s informacijom o novoj HT poruci za vas (za one koji nemaju suporter)
+foxtrick.FoxtrickAlert.NewForum.desc=Prikazuje prozorčić s informacijom o novoj poruci na forumu za vas (za one koji nemaju suporter)
+foxtrick.AlertCustomSounds.desc=Personalizirani zvuci za obavještenja. Ukoliko ne uključite neke od postavki, za njih će se koristiti standardni zvuk. Ukoliko omogućite zvuk, ali polje za postavke ostavite prazno, neće biti zvučnog obavještenja.
+foxtrick.AlertCustomSounds.LoginWelcome.desc=Vaše logovanje
+foxtrick.AlertCustomSounds.LoginSupporters.desc=Logovanje korisnika koje podržavate
+foxtrick.AlertCustomSounds.ForumReplyToMe.desc=Odgovori na vaše poruke na forumu
+foxtrick.AlertCustomSounds.TransferMarket.desc=Poruke s transfer liste
+foxtrick.AlertCustomSounds.Challenges.desc=Izazovi
+foxtrick.AlertCustomSounds.Guestbook.desc=Knjiga gostiju
+foxtrick.AlertCustomSounds.MailToMe.desc=HT pošta za vas
+foxtrick.AlertCustomSounds.MyHTMessages.desc=MojHT poruke
+foxtrick.AlertCustomOff.desc=Isključivanje izabranih obavještenja. Izabrane opcije neće prikazivati poruke upozorenja i neće vas obavještavati zvukom.
+foxtrick.AlertCustomOff.LoginWelcome.desc=Vaše logovanje
+foxtrick.AlertCustomOff.LoginSupporters.desc=Logovanje korisnika koje podržavate
+foxtrick.AlertCustomOff.ForumReplyToMe.desc=Odgovori na vaše poruke na forumu
+foxtrick.AlertCustomOff.TransferMarket.desc=Poruke s transfer liste
+foxtrick.AlertCustomOff.Challenges.desc=Izazovi
+foxtrick.AlertCustomOff.Guestbook.desc=Knjiga gostiju
+foxtrick.AlertCustomOff.MailToMe.desc=HT pošta za vas
+foxtrick.AlertCustomOff.MyHTMessages.desc=MojHT poruke
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Pokazuje srednju vrijednost na usporedbi transfera
 foxtrick.FlagCollectionToMap.desc=Pokazuje mapu svijeta sa svim zastavicama koje posjedujete u bilo kojoj kategoriji
@@ -89,9 +89,9 @@ foxtrick.CopyPostID.desc=Dodaj link za kopiranje ID broja poruke
 foxtrick.CopyPostID.AddCopyIcon.desc=Dodaje ikonicu Copy PostID ispred prvog postID-a
 foxtrick.CopyPosting.desc=Dodaj ikonicu za kopiranje posta na forumu zajedno sa referencama
 foxtrick.ShowForumPrefButton.desc=Prikazuje ikonicu za podešavanje foruma na svim stranicama foruma
-
-
-
+foxtrick.AlltidFlags.desc=Dodaje Alltidove zastave i linkove na stranici foruma
+foxtrick.AlltidFlags.LinkFlagToLeague.desc=Prvi link za ligu - Hattrick
+foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Prvi link za ligu - Alltid
 foxtrick.LinksLeague.desc=Dodaje vanjske linkove na stranicu lige
 foxtrick.LinksTeam.desc=Dodaje vanjske linkove na stranicu ekipe
 foxtrick.LinksCountry.desc=Dodaje vanjske linkove na stranicu države
@@ -189,7 +189,7 @@ foxtrick.FixcssProblems.desc=Popravlja pojedine probleme s pogrešnim HT css sti
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Ispravlja skraćivanje predugih imena timova u lijevom meniju
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Ispravlja nevidljive FoxLink sličice u zaglavljima postova
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Ispravlja iskakanje stranice kada skrolbar nije prikazan
-
+foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Ispravlja problem razmještanja polja za selektovanje igrača na stranici postave za meč
 foxtrick.FixcssProblems.RTL_Fixes.desc=Ispravlja određene HT greške za jezike koji se pišu s desna na lijevo
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Dodaje ispravan klizač stranicama foruma. Stranica manje podrhtava nego sa samo uključenom HT opcijom
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Povećava slova za HT format 'malih slova'
@@ -200,12 +200,12 @@ foxtrick.SimplePresentation.liveHighlightRed.desc=Označava nova obavještenja c
 foxtrick.SimplePresentation.HideAchievementsIcons.desc=Sakriva simbole na stranici dostignuća
 foxtrick.SimplePresentation.NoLogo.desc=Sakriva logo tima
 foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Označava HT osoblje na svim stranicama
-
+foxtrick.SimplePresentation.HideUnseenMatchesPanel.desc=Sakriva traku s informacijom o nepregledanim utakmicama
 foxtrick.ForumPresentation.desc=Opcije dodatnog prikazivanja na forumu
 foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Uklanja zastavicu korisnika sa zaglavnja poruke
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Uklanja ligu korisnika sa zaglavnja poruke
 foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Uvijek prikazuje sadržaj spoilera
-
+foxtrick.ForumPresentation.hideForumNotificationBox.desc=Sakriva opciju obavještenja na forumu o prethodnim nepročitanim porukama unutar teme.
 foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Prikazuje broj novih poruka u zagradama iza brojača poruka
 foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Prikazuje simbole umjesto tekstualnih linkova u podnožju foruma
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=POpravlja pogrešno postavljeni info avatara ako je zaglavlje poruke prenatrpano
@@ -224,9 +224,9 @@ foxtrick.ExtraShortcuts.Supporterstats.desc=Link na stranicu sa supporter statis
 foxtrick.ExtraShortcuts.Transfers.desc=Link na stranicu transfera svog tima
 foxtrick.ExtraShortcuts.Prefs.desc=Link na stranicu s postavkama
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link na stranicu s FoxTrick postavkama
-
-
-
+foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link na Hattrick Radio (Belgija/Holandija) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link na Hattrick Radio (Belgija/Holandija) (Windows Media Player)
+foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link na Radio downtime (Njemačka/Austrija/Švicarska/Luksemburg) (Winamp)
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Kopira ID meča kad se klikne na ikonicu liga/kup/prijateljska u mečevima ili na stranici arhive mečeva. Za supportere također i na stranici 'Lice u lice', u tabovima 'Zadnje utakmice' i 'Historija'.
 foxtrick.HeaderFix.desc=Fiksira zaglavlje i horizontalni meni dok se ostatak stranice može skrolati.
@@ -241,9 +241,9 @@ foxtrick.ContextMenuCopy.Link.desc=Opcija za kopiranje mjesta linka u HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Opcija za kopiranje označenog sadržaja u HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Opcija za kopiranje tabele u HT-ML
 foxtrick.NewMail.desc=Označava prijem nove HT pošte
-
-
-
+foxtrick.NewMail.CustomColor.desc=Sami odredite boju za broj koji označava novopristigle HT poruke. Potrebno je i da restartujete browser.
+foxtrick.NewMail.HighlightNewMailIcon.desc=Osjenči ikonicu za novu poruku crvenom bojom. Potrebno je i da restartujete browser.
+foxtrick.NewMail.HighlightNewForum.desc=Označi broj novih poruka na forumu u horizontalnom meniju
 foxtrick.CopyYouth.TrainingReport.desc=Na stranicu izvještaja trenera omladinskog tima dodaje opciju 'Kopiraj izvještaj s treninga'
 foxtrick.CopyYouth.ScoutComment.desc=Na stranicu igrača omladinskog tima dodaje opciju 'Kopiraj komentar skauta'
 foxtrick.CopyYouth.PlayerSource.desc=Dodaje opciju 'Kopiraj HTML izvorni kod' na stranici juniora (koja se može koristiti na hattrick-youthclub.org)
@@ -256,18 +256,18 @@ foxtrick.LeagueNewsFilter.all.desc=Prikazuj sve vijesti
 foxtrick.LeagueNewsFilter.friendlies.desc=Prikaži samo međunarodne prijateljske utakmice i promjene trenera
 foxtrick.LeagueNewsFilter.transfers.desc=Prikaži samo transfere
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Prikaži samo promjene naloga za mečeve
-
-
-
-
-
+foxtrick.LeagueNewsFilter.PAs.desc=Prikaži samo izjave za štampu
+foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=U tabeli nadolazećih utakmica označi timove koji su nedavno promijenili ili postavili naredbe za utakmicu
+foxtrick.LeagueNewsFilter.highlight_wins.desc=Označi pobjedničke timove u tabeli utakmica prethodnog kola
+foxtrick.LeagueNewsFilter.gray_bots.desc=Označi sivim botove i timove bez vlasnika u tabelama ligaških utakmica
+foxtrick.ShortPAs.desc=Prikaži samo naslove izjava za štampu s linkom za pregled u cijelosti
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Na stranici regije, prebacuje na vrh liste menadžere koji su online. Upozorenje! Ova funkcija jako usporava učitavanje stranice ako u regiju ima više od 100 online igrača.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Dodaj 'TeamPopupLinks' linkovima na klubove
 foxtrick.TeamPopupLinks.UserLinks.desc=Dodaj 'TeamPopupLinks' linkovima na korisnike
 foxtrick.TeamPopupLinks.Manager.desc=Link na menadžera (samo za linkove na tim)
 foxtrick.TeamPopupLinks.Team.desc=Link na stranicu kluba (samo za linkove na korisnike)
-
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link na tim na Alltidu
 foxtrick.TeamPopupLinks.Matches.desc=Link na zadnju utakmicu
 foxtrick.TeamPopupLinks.Players.desc=Link na stranicu igrača
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link na 5 zadnjih logiranja
@@ -307,8 +307,8 @@ foxtrick.HighlightCupwins.desc=Označi pobjedničke ekipe na stranicama utakmica
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Označi iznenađenja (utakmice u kojima je pobijedio nižerangirani tim)
 foxtrick.SkillTranslation.desc=Dodaj engleski prevod za vještine na stranici: Pomoć » Priručnik » Dodatak 2. Ocjene
 foxtrick.ReadHtPrefs.desc=Automatsko određivanje jezika Foxtricka
-
-
+foxtrick.ReadHtCountryCurrencyDateFormat.desc=Automatsko određivanje države, valute i formata datuma
+foxtrick.CurrentHtCountryCurrencyDateFormat.desc=Posljednje određene vrijednosti:
 #CountryList
 foxtrick.CountryList.desc=Modifikacije za ime i zastavicu države
 foxtrick.CountryList.SelectBoxes.desc=Imena država na engleskom zamjenjuje lokalnim nazivima
@@ -361,8 +361,8 @@ foxtrick.HistoryStats.cupwinner=Osvajač kupa
 foxtrick.HistoryStats.cupwinner.short=OK
 
 # YouthPromoteDays
-
-
+foxtrick.youthpromotedays.prom_d=Igrač može biti promovisan za
+foxtrick.youthpromotedays.days=dana
 YouthPromotes.today=Igrač može biti promovisan danas!
 
 # links
@@ -405,8 +405,8 @@ foxtrick.LeagueNewsFilter.all=Sve
 foxtrick.LeagueNewsFilter.friendlies=Prijateljske i promjene trenera
 foxtrick.LeagueNewsFilter.transfers=Transferi
 foxtrick.LeagueNewsFilter.lineup_changes=Promjene postave
-
-
+foxtrick.LeagueNewsFilter.PAs=Izjave za štampu
+foxtrick.ShortPAs.more=više..
 
 #gotoPostBox
 button.go=Idi na post
@@ -423,7 +423,7 @@ template_exists=Šablon već postoji ili je prazan
 template_title=Naziv šablona:
 template_title_illegal=karakteri '[' i ']' nisu dozvoljeni u nazivima
 delete_template_ask=Izbriši šablon?
-
+ok=OK
 
 #PostPreview
 show_preview_from_post=Prikaži izgled poruke prije slanja
@@ -590,7 +590,7 @@ Current_league=Trenutna liga
 Current_league.abbr=Liga
 
 #Skills
-
+weak=Slab
 
 #matchdetail
 foxtrick.matchdetail.midfield=Veza
@@ -641,50 +641,50 @@ foxtrick.balancedTrainer=%s trener koji je neutralan (ni defanzivan ni ofanzivan
 
 foxtrick.modules_allpages=Moduli koji rade na svim stranicama
 HTLanguageChanged=FoxTrick je otkrio promjenu jezika koji koristite na Hattricku. Jezik FoxTricka je sada postavljen na %s.
-
-
+Screenshot=Screenshot s objašnjenjem funkcija modula
+FoxtrickFirstRunHint=UPOZORENJE! Ova poruka će se prikazivati sve dok je ne zatvorite. Da bi ste je vidjeli opet, u glavnim opcijama FoxTricka odaberite verziju za koju želite vidjeti promjene. Ako postavite pokazivač miša iznad kolone 'Verzija' u tabeli iznad također će vam biti prikazane najnovije promjene (ali samo na engleskom).
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all releases
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'English' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
 
-
-
+StyleTutorial.title=Stil FoxTricka
+StyleTutorial.content=FoxTrick obezbjeđuje set prezentacijskih izgleda za korisnike da bi mogli podesiti svoj vlastiti stil.\nOvi izgledi su omogućeno preko HTML identifikacija i klasa, a vi možete koristiti CSS za definiranje stila koji preferirate.\nPrimjer datoteke korisničkog stila se može pronaći pod %s, koji možete mijenjati prema svojim potrebama.\nU slučaju problema s linkom, kopirajte i zalijepite ga u traku adrese. Nakon spremanja datoteke, možete koristiti SkinPlugin modul za učitavanje CSS datoteke da biste uključili korisnički stil.
 
 # changes categories
+new=Novo
+fix=Ispravka
 
-
-
-
-
-
-
-
-
+Close=Zatvori
+SortBy=Sortiraj po
+Module=Modul
+PreferenceTab=Postavke
+NewAfter=Verzija
+ChangeCategory=Tip
 Coach=Trener
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Radnje
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
-
+foxtrick.tweaks.overview=Pregled
 foxtrick.tweaks.writeinguestbook=Upišite se u knjigu gostiju
 foxtrick.tweaks.copyplayerad=Iskopirajte podatke o igraču u clipboard
 foxtrick.tweaks.copied=Podaci o igraču su iskopirani u clipboard
-
-
+HatStatsDetailed=Hatstats (detaljno)
+HatStatsTotalOnly=Hatstats (ukupno)
 CopyRatings.both=Kopiraj ocjene (u HT-ML)
 CopyRatings.home=Kopiraj ocjene domaćeg tima (u HT-ML)
 CopyRatings.away=Kopiraj ocjene gostujućeg tima (u HT-ML)
 CopyRatings.copied=Ocjene su uspјešno iskopirane u clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
-
+foxtrick.tweaks.copytrainingreport=Kopiraj izvještaj s treninga u clipboard
 foxtrick.tweaks.copyskilltable=Kopiraj tabelu s vještinama u clipboard (u HT-ML)
-
-
-
-
-
+foxtrick.tweaks.copyscoutreport=Kopiraj komentar skauta u clipboard
+foxtrick.tweaks.scoutreportcopied=Komentar skauta je kopiran u clipboard.
+foxtrick.tweaks.copyplayerscource=Kopiraj HTML izvorni kod igrača u clipboard (za hattrick-youthclub.org)
+foxtrick.tweaks.trainingreportcopied=Izvještaj s treninga je kopiran u clipboard.
+foxtrick.tweaks.playersourcecopied=HTML izvorni kod je kopiran u clipboard.
 foxtrick.tweaks.skilltablecopied=Izvorni kod tabele s vještinama je kopiran u clipboard.
 foxtrick.tweaks.matchidcopied=ID utakmice je kopiran u clipboard.
 foxtrick.tweaks.postidcopied=Post ID [post=%s] je kopiran u clipboard.
@@ -704,7 +704,7 @@ foxtrick.matches.wronglang=Foxtrick: Statistika ne može biti prikazana jer vaš
 # Look on your Matches page (Club -> Matches -> pick a match) to the lowest right box title to see how you should translate the string below
 foxtrick.matches.suppstats=Statistike supportera
 # Look on your Matches page: copy the header of the sold seats box
-
+foxtrick.matches.soldseats=Prodano mjesta
 
 
 # Context menu items
@@ -717,7 +717,7 @@ copy.table=Kopiraj tabelu HT-ML
 #teampopups
 Manager=Mеnadžer
 Team=Klub
-
+TeamAtAlltid=Tim na Alltidu
 Matches=Utakmice
 Players=Igrači
 last_5_ips=5 posljednjih logiranja
@@ -776,9 +776,9 @@ Senior=Senior
 Youth=Junior
 
 # TransferSearchResultFilters
-
-
-
+TransferSearchResultFilters.hide_bruised=Sakrij igrače u modricama
+TransferSearchResultFilters.hide_injured=Sakrij povrijeđene igrače
+TransferSearchResultFilters.cards=Kartoni:
 TransferSearchResultFilters.days=Dana:
 
 # refer to transfer search form
@@ -845,19 +845,19 @@ tab.help=Pomoć
 
 
 ex color editor
-
-
+foxtrick.prefs.PrefDefaultWarningLabel=Bitno upozorenje za Foxtrik podešavanja
+foxtrick.prefs.PrefDefaultWarningText=Provjerite jeste li dobro podesili valutu i jezik koji koristite na Hattricku! Pojedine funkcije Foxtricka neće raditi ako ovo niste podesili pravilno.
 foxtrick.prefs.basicPreferences=Osnovne postavke
 foxtrick.prefs.captionHTLanguage=Jezik na Hattricku
 foxtrick.prefs.captionHTDateformat=Podešavanje formata datuma
 foxtrick.prefs.captionHTCountry=Država na Hattricku
-
+foxtrick.prefs.captionShowOnStatusBar=Simbol statusne trake
 foxtrick.prefs.captionCleanupBranch=Sačuvana podešenja
 foxtrick.prefs.captionLoadSavePrefs=Uvezi ili eksportuj podešenja
 
 
 #statusbarpref
-
+foxtrick.prefs.statusbarpref=Prikaži FoxTrick simbol na statusnoj traci (potreban je restart)
 foxtrick.prefs.labelCleanupBranch=Vrati početna podešenja (Samo podešenja, ne i lične postavke. Potreban je restart.)
 foxtrick.prefs.labelDisableAll=Isključi sve module
 foxtrick.prefs.labelSavePrefs=Eksportuj podešenja i/ili lične postavke
@@ -871,14 +871,14 @@ foxtrick.prefs.stagepref=Isključi na STAGE serveru
 foxtrick.prefs.disableTemporaryLabel=Privremeno isključi
 
 button.save=Sačuvaj
-
-
+foxtrick.prefs.buttonCancel=Odustani
+foxtrick.prefs.buttonExample=Primjer
 button.customize=Prilagodi
 button.restoreDefault=Vrati početno
 button.disableAll=Isključi sve
 button.export=Snimi
 button.import=Učitaj
-
+foxtrick.prefs.activeCurrencyConverter=Omogući konvertor valute
 
 delete_foxtrick_branches_ask=Zaista želite obrisati sve sačuvane karakteristike?\nFirefox se mora restartovati da bi promjena stupila na snagu!
 disable_all_foxtrick_modules_ask=Zaista želite isključiti sve Foxtrick module?\n
