--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -72,9 +72,9 @@ foxtrick.CopyPostID.desc=Poskytuje odkaz ke zkopírování ID příspěvku.
 foxtrick.CopyPostID.AddCopyIcon.desc=Před první ID příspěvku přidávat ikonu sloužící ke zkopírování ID příspěvku
 foxtrick.CopyPosting.desc=Přidává ikonu pro zkopírování příspěvku včetně odkazů.
 foxtrick.ShowForumPrefButton.desc=Na stránkách konferencí zobrazuje odkaz na stránku s nastavením konferencí.
-
-
-
+foxtrick.AlltidFlags.desc=V záhlaví příspěvků na konferenci přidává vlajky ze serveru Alltid s odkazy na uživatele
+foxtrick.AlltidFlags.LinkFlagToLeague.desc=Pokud jsou avatary zapnuté (mohou být i skryté), první odkaz vede na stránku ligy na Hattricku
+foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Oba odkazy vedou na stránku ligy na serveru Alltid
 foxtrick.LinksLeague.desc=Na stránku ligy přidává externí odkazy.
 foxtrick.LinksTeam.desc=Na stránku týmu přidává externí odkazy.
 foxtrick.LinksCountry.desc=Na stránku státu přidává externí odkazy.
@@ -172,7 +172,7 @@ foxtrick.FixcssProblems.desc=Opravuje několik chyb vyskytujících se v CSS sty
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Opravit ořezávání dlouhých jmen týmů v levé nabídce
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Opravit neviditelné obrázky FoxLinku v záhlaví příspěvků
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Opravit šířku stránky v případě, že není zobrazena rolovací lišta
-
+foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Opravit problém s nesprávně umístěným oknem výběru na stránce sestavy
 foxtrick.FixcssProblems.RTL_Fixes.desc=Opravit několik chyb Hattricku vztahující se k jazykůk psaným zprava doleva
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Na konferenci přidat pevnou posuvnou lištu. Méně obtěžující, než podobné řešení Hattricku
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Zvětšit velikost písma u formátování 'small font'
@@ -184,7 +184,7 @@ foxtrick.SimplePresentation.liveHighlightRed.desc=Zobrazovat nové události v H
 foxtrick.SimplePresentation.HideAchievementsIcons.desc=Skrýt ikonky na stránce s úspěchy
 foxtrick.SimplePresentation.NoLogo.desc=Skrýt loga týmů
 foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Zvýrazňovat HT pracovníky na všech stránkách
-
+foxtrick.SimplePresentation.HideUnseenMatchesPanel.desc=Skrývat informační okno s nezhlédnutými zápasy
 foxtrick.ForumPresentation.desc=Další možnosti zobrazení konferencí.
 foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Odstranit vlaječky uživatelů ze záhlaví příspěvků na konferencích
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Odstranit ligy uživatelů ze záhlaví příspěvků na konferencích
@@ -247,7 +247,7 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=Zapnout plovoucí nabídku u odkazů na t
 foxtrick.TeamPopupLinks.UserLinks.desc=Zapnout plovoucí nabídku u odkazů na uživatele
 foxtrick.TeamPopupLinks.Manager.desc=Manažer (jen při odkazech vedoucích na tým)
 foxtrick.TeamPopupLinks.Team.desc=Tým (jen při odkazech vedoucích na stránku manažera)
-
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Stránka týmu na serveru Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Zápasy
 foxtrick.TeamPopupLinks.Players.desc=Hráči
 foxtrick.TeamPopupLinks.last_5_ips.desc=5 posledních přihlášení
@@ -671,13 +671,13 @@ CopyRatings.away=Zkopírovat hodnocení hostujícího týmu (v HT-ML)
 CopyRatings.copied=Zápasové hodnocení bylo vloženo do schránky.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
-
+foxtrick.tweaks.copytrainingreport=Kopírovat hlášení o tréninku do schránky
 foxtrick.tweaks.copyskilltable=Kopírovat tabulku dovedností do schránky (v HT-ML)
-
-
-
-
-
+foxtrick.tweaks.copyscoutreport=Kopírovat komentář skauta do schránky
+foxtrick.tweaks.scoutreportcopied=Komentář skauta byl zkopírován do schránky.
+foxtrick.tweaks.copyplayerscource=Kopírovat HTML zdrojový kód hráče do schránky (pro použití na stránkách hattrick-youthclub.org)
+foxtrick.tweaks.trainingreportcopied=Zápis z tréninku byl zkopírován do schránky.
+foxtrick.tweaks.playersourcecopied=HTML zdrojový kód hráče byl zkopírován do schránky.
 foxtrick.tweaks.skilltablecopied=Konferenční kód tabulky dovedností byl zkopírován do schránky.
 foxtrick.tweaks.matchidcopied=ID zápasu bylo zkopírováno do schránky.
 foxtrick.tweaks.postidcopied=Odkaz na příspěvek [post=%s]  byl zkopírován do schránky.
@@ -707,7 +707,7 @@ copy.table=Kopírovat tabulku v HT-ML
 #teampopups
 Manager=Manažer
 Team=Tým
-
+TeamAtAlltid=Tým na Alltidu
 Matches=Zápasy
 Players=Hráči
 last_5_ips=Poslední přihlášení
@@ -800,7 +800,7 @@ HTMSPrediction.title=Analýza Hattrick Zápasů (HTMS)
 HTMSPrediction.changePrediction=Změnit předpoklady
 
 # HTMSPoints
-
+HTMSPoints.points=HTMS body:
 HTMSPoints.AbilityAndPotential=Schopnost: %1 / Potenciál: %2
 
 # CrossTable
@@ -893,7 +893,7 @@ exception.error=Chyba %s
 foxtrick=FoxTrick
 preferences=Nastavení
 foxtrick.prefs.preferences=Nastavení FoxTricku
-
+foxtrick.log=Log FoxTricku
 
 status.active=aktivní
 status.enabled=zapnuto, ale na %s neaktivní
@@ -919,13 +919,13 @@ foxtrick.prefs.basicPreferences=Základní nastavení
 foxtrick.prefs.captionHTLanguage=Jazyk
 foxtrick.prefs.captionHTDateformat=Formát data
 foxtrick.prefs.captionHTCountry=Země
+pref.printDateFormat=Formát data pro tisk
 
-
-
+foxtrick.prefs.captionShowOnStatusBar=Ikona ve stavové liště
 foxtrick.prefs.captionCleanupBranch=Nastavení FoxTricku
 foxtrick.prefs.captionLoadSavePrefs=Exportovat/importovat nastavení
 #statusbarpref
-
+foxtrick.prefs.statusbarpref=Zobrazit ikonu Foxtricku ve stavové liště (vyžaduje restart)
 foxtrick.prefs.labelCleanupBranch=Obnovit původní nastavení (jen předvolby, bez osobních nastavení)
 foxtrick.prefs.labelDisableAll=Vypnout všechny moduly
 foxtrick.prefs.labelSavePrefs=Exportovat nastavení a vlastní nastavení
@@ -954,8 +954,8 @@ foxtrick.showReleaseNotes=Po aktualizaci FoxTricku zobrazit poznámky k vydání
 foxtrick.versionReleaseNotes=Zobrazit poznámky k verzi pro:
 
 about.copyright=Copyright
-
-
+about.headDevelopers=Hlavní vývojáři
+about.projectOwners=Vlastníci projektu
 about.developers=Vývojáři
 about.translators=Překladatelé
 about.designers=Designéři
