--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -69,9 +69,9 @@ foxtrick.CopyPostID.desc=Proporciona un link para copiar el ID de un post
 foxtrick.CopyPostID.AddCopyIcon.desc=Añade icono para copiar el Id del post antes del Id del primer mensaje
 foxtrick.CopyPosting.desc=Añade icono para copiar el post incluyendo referencias
 foxtrick.ShowForumPrefButton.desc=Link a preferencias del foro en las páginas del foro
-
-
-
+foxtrick.AlltidFlags.desc=Añadir banderas de Alltid y links en ambos escritores de la conferencia
+foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link en la conferencia a la página de la liga de Hattrick
+foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link en la conferencia a la página de la liga de Alltid
 foxtrick.LinksLeague.desc=Añadir algunos links externos en la página de la liga
 foxtrick.LinksTeam.desc=Añadir algunos links externos en la página de los equipos
 foxtrick.LinksCountry.desc=Añadir algunos links externos en la página del país
@@ -242,7 +242,7 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=Añade popups a los links del equipo
 foxtrick.TeamPopupLinks.UserLinks.desc=Añade popups a los links del manager
 foxtrick.TeamPopupLinks.Manager.desc=Manager (solo para links del equipo)
 foxtrick.TeamPopupLinks.Team.desc=Equipo (solo para links del manager)
-
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Página del equipo en Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Partidos
 foxtrick.TeamPopupLinks.Players.desc=Jugadores
 foxtrick.TeamPopupLinks.last_5_ips.desc=Últimas 5 conexiones
@@ -679,7 +679,7 @@ CopyRatings.home=Copiar calificaciones equipo local (en HT-ML)
 CopyRatings.away=Copiar calificaciones equipo visitante (en HT-ML)
 CopyRatings.copied=Se han copiado las calificaciones al portapapeles
 
-
+CopyYouth.title=Funciones de copia de juveniles
 CopyYouth.trainingReport=Copiar informe de entrenamiento
 CopyYouth.trainingReport.copied=El entrenamiento ha sido copiado
 CopyYouth.scoutComment=Copiar comentario del scout
@@ -722,7 +722,7 @@ copy.table=Copia la tabla en HT-ML
 #teampopups
 Manager=Manager
 Team=Equipo
-
+TeamAtAlltid=Equipo en Alltid
 Matches=Partidos
 Players=Jugadores
 last_5_ips=Últimas 5 conexiones
@@ -949,12 +949,12 @@ foxtrick.prefs.basicPreferences=Preferencias básicas
 foxtrick.prefs.captionHTLanguage=Configuración de idioma
 foxtrick.prefs.captionHTDateformat=Configuración de formato de fecha
 foxtrick.prefs.captionHTCountry=Configuración de país
+pref.printDateFormat=Formato de fecha para impresión
 
-
-
+foxtrick.prefs.captionShowOnStatusBar=Mostrar icono en la barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferencias almacenadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar o importar preferencias
-
+foxtrick.prefs.statusbarpref=Permitir (requiere reiniciar)
 foxtrick.prefs.labelCleanupBranch=Restaurar configuración por defecto de Foxtrick (sólo preferencias, no configuración personal. Requiere reiniciar)
 foxtrick.prefs.labelDisableAll=Deshabilitar todos los módulos de foxtrick
 foxtrick.prefs.labelSavePrefs=Exportar preferencias y configuración personal
@@ -983,8 +983,8 @@ foxtrick.showReleaseNotes=Muestra las notas de la versión después de actualiza
 foxtrick.versionReleaseNotes=Muestra las notas de la versión para:
 
 about.copyright=Copyright
-
-
+about.headDevelopers=Desarrolladores principales
+about.projectOwners=Dueños del proyecto
 about.developers=Desarrolladores
 about.translators=Traductores
 about.designers=Diseñadores
