--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -12,7 +12,7 @@
 # Thus, you need to include those %s entries into your text accordingly
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
-
+direction=ltr
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -33,7 +33,7 @@ foxtrick.AttVsDef.newstyle.desc=새 스타일
 foxtrick.AttVsDef.oldstyleifkseparated.desc=예전 스타일 (간접 세트피스 구분됨)
 #Ratings
 foxtrick.Ratings.desc=경기 페이지에 레이팅 추가
-
+foxtrick.Ratings.HideAverages.desc=평균 레이팅 감추기
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=(자세한) HatStats
 foxtrick.Ratings.HatStatsSeparated.desc=레이팅별로 구분된 HatStats
@@ -73,25 +73,25 @@ foxtrick.ForumYouthIcons.youth_series.desc=YouthSeriesID 아이콘 추가
 foxtrick.ForumYouthIcons.enlarge_input.desc=쓰기 좋게 텍스트 상자 확대
 foxtrick.ForumYouthIcons.pre.desc=이전 양식의 토론장 아이콘 추가
 foxtrick.ForumYouthIcons.table.desc=테이블 아이콘 추가. 정규 표현을 허용하는 커스텀 태그(예 \\.).
-
+foxtrick.ForumYouthIcons.symbols.desc=아래 기호 아이콘 추가. 엔트리는 세미콜론으로 구분 됩니다. 세미콜론을 사용하기 위해서 "/;"을 입력하세요.
 foxtrick.ForumYouthIcons.debug.desc=폭스트릭 디버그 로그 아이콘 추가
 foxtrick.ForumYouthIcons.settings.desc=폭스트릭 설정 아이콘 추가
 #FormatPostingText
 foxtrick.FormatPostingText.desc=폭스트릭 HT-ML 태그를 HTML 태그로 대체 (i.e. 'pre' element)
-
+foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=스포일러 안에 중첩 인용문 보기. 아래 레벨 지정.
 #EmbedMedia
-
-
-
-
-
+foxtrick.EmbedMedia.desc=미디어 파일 링크를 감지하고 사이트에 내장. (실험중)
+foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=유투브 영상 내장
+foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Vimeo 영상 내장
+foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=FunnyOrDie 영상 내장
+foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Dailymotion 영상 내장
 #Forum direct page links
-
+foxtrick.DirectPageLinks.desc=토론장 스레드 안에 특정 페이지로 이동하는 링크 추가.
 #
 foxtrick.CopyPostID.desc=포스트 ID 복사하기 위한 링크 제공
 foxtrick.CopyPosting.desc=참조를 포함한 포스팅 복사하기 위한 아이콘 추가
 foxtrick.ShowForumPrefButton.desc=토론장에 토론장 설정을 위한 링크
-
+foxtrick.Links.desc=다른 링크 모듈을 제대로 작동하는데 필요한 기본 모듈.
 foxtrick.LinksLeague.desc=시리즈 페이지에 추가 몇 개의 추가 링크 추가
 foxtrick.LinksTeam.desc=팀 페이지에 추가 몇 개의 추가 링크 추가
 foxtrick.LinksCountry.desc=국가 페이지에 추가 몇 개의 추가 링크 추가
@@ -150,7 +150,7 @@ foxtrick.ForumLastPost.lastpage.desc=마지막 포스팅이 아니라 마지막 
 foxtrick.MatchPlayerColouring.desc=경기 보고서에서 팀에 따라 선수 색칠. 선수 능력 페이지에 있는 링크를 통해서 올 때 그 선수만 강조
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=보유 선수 색 구분
 foxtrick.MatchReportFormat.desc=경기 이벤트에 따라 한 줄씩 보고서 발표.
-
+foxtrick.MatchReportFormat.ShowEventIcons.desc=이벤트 특정 아이콘 추가.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=보유 팀 색 구분
 foxtrick.ForumRedirManagerToTeam.desc=구단주 페이지에서 토론장 링크의 팀 페이지로 리다이렉션 링크
 foxtrick.ManagerButtons.desc=구단주 페이지와 팀 페이지에 있는 구단주 버튼 추가 또는 변경
@@ -249,7 +249,7 @@ foxtrick.NewMail.NotifyForum.desc=당신에게 새로운 토론장 응답이 있
 foxtrick.CopyYouth.desc=유소년 훈련 보고서와 소스 복사 기능
 foxtrick.CopyYouth.TrainingReport.desc=훈련 보고서
 foxtrick.CopyYouth.ScoutComment.desc=스카우트 의견
-
+foxtrick.CopyYouth.RejectedToHTY.desc=스카우트 의견 복사하고 선수 거절하는 HT-Youthclub 페이지 열기
 foxtrick.CopyYouth.PlayerSource.desc=선수 소스
 foxtrick.CopyYouth.FixturesSource.desc=Fixtures 소스
 foxtrick.PlayerBirthday.desc=선수 개요에 지난 생일과 다가오는 생일 보기
@@ -340,7 +340,7 @@ foxtrick.HTMSPoints.desc=HTMS 스킬 테이블로 계산된 선수 훈련 포인
 foxtrick.HTMSPoints.AddToPlayer.desc=선수 페이지에서 보기
 foxtrick.HTMSPoints.AddToSearchResult.desc=이적 검색 결과 페이지에서 보기
 foxtrick.HTMSPoints.AddToPlayerList.desc=선수 목록 페이지에서 보기
-
+foxtrick.TableOfStatisticalTruth.desc=시리즈 최종 순위 유지에 대해 통계적 예측 (시즌이 종료된 경우에만).
 foxtrick.FriendlyInterface.desc=친선 경기 인터페이스를 제공하기 위한 수정
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=경기 라인업 페이지 안에 줄임표 없이 선수 이름 보기
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=국가 대표 팀 선수의 링크로 국가대표팀을 표시
@@ -358,18 +358,18 @@ foxtrick.ShowLineupSet.Ownerless.desc=주인 없는 팀 강조
 foxtrick.ShowLineupSet.Winning.desc=이긴 팀 강조
 foxtrick.SupporterStatsEnhancements.desc=서포터 통계에 현재 스쿼드 선수 강조
 foxtrick.MobileEnhancements.desc=모바일 기기를 위한 강화 설정
-
-
-
-
-
-
-
-
-
-
-
-
+foxtrick.MatchOrderInterface.desc=경기 지시사항 인터페이스 수정.
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=지난 경기에서 뛴 선수 강조하고 최근 포지션과 얼마나 뛰었는지 보기
+foxtrick.MatchOrderInterface.Specialties.desc=선수 특수능력 보기
+foxtrick.MatchOrderInterface.StayOnPage.desc=저장 후에 경기 지시사항 페이지에 머물기
+foxtrick.MatchOrderInterface.SwapPositions.desc=선수 좌우 스왑 링크 추가
+foxtrick.MatchSimulator.desc=경기 지시사항 인터페이스에 경기 시뮬레이션 추가
+foxtrick.MatchSimulator.RatingsOnTop.desc=상단에 레이팅 예측 유지
+foxtrick.MatchSimulator.RatingsBellow.desc=예측 아래 표시
+foxtrick.MatchSimulator.RatingsRight.desc=오른쪽에 예측 표시
+foxtrick.HeaderToggle.desc=h2-머리글을 클릭하면 다음 구역 보기와 감추기로 전환. 페이지와 머리글 제목을 기반으로 마지막 설정을 기억
+foxtrick.Filter.desc=최고 선수 페이지에 필터 추가
+foxtrick.RatingsRange.desc=통계에 0-20 범위로 평균 레이팅 표시
 
 # -----------------------------------------------------------------------------
 
@@ -413,10 +413,10 @@ foxtrick.TeamStats.TransferListed.label=이적 목록에 있음
 foxtrick.TeamStats.Pictures.label=얼굴
 foxtrick.TeamStats.PlayedLatest.label=최근 경기에서 뛰었음
 foxtrick.TeamStats.NotPlayedLatest.label=최근 경기에서 뛰지 않았음
-
-
-
-
+foxtrick.TeamStats.NotTransferListed.label=이적 목록에 없음
+foxtrick.TeamStats.ActivePlayers.label=활동하는 선수
+foxtrick.TeamStats.HomeGrownPlayers.label=승격한 선수
+foxtrick.TeamStats.PurchasedPlayers.label=이적된 선수
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -497,11 +497,11 @@ ForumSpecialBBCode.pre=이전 양식 태그 삽입
 ForumSpecialBBCode.table='표' 양식 태그 삽입 선택된 텍스트를 표로 변환 (줄은 행으로 변환됩니다. "%s"에 의해 구분된 텍스트는 셀로 변환될 겁니다.)
 ForumSpecialBBCode.tableSeparator="%s"을 셀로 변환
 ForumSpecialBBCode.enterSeparator=커스텀 구분자 입력
+ForumSpecialBBCode.forumSymbol="%s" 삽입
+ForumSpecialBBCode.symbols=기호 삽입: %s
 
 
-
-
-
+ShowNestedQoutes=중첩 인용부호 나타내기
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=필터 이름 입력:
@@ -510,18 +510,18 @@ foxtrick.transferfilter.save_new_filter=새 필터 저장
 foxtrick.transferfilter.Foxtrick_Filters=폭스트릭 필터
 
 #Filter
-
-
-
-
-
-
-
-
-
-
-
-
+Filters=필터
+Filters.filter=확인
+Filters.clear=지우기
+Filters.noFilter=필터 없음
+Filters.none=없음
+Filters.days=일
+Filters.tsi=TSI
+Filters.stamina=체력
+Filters.Form=Form
+Filters.XP=경험
+Filters.specialty=특수능력
+Filters.stars=별점
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -550,14 +550,14 @@ match.type.youth.league=유소년 리그
 match.type.youth.friendly=유소년 친선
 match.type.youth.friendly.cup=유소년 친선 (컵 대회 규칙)
 
-
-
-
-
-
-
-
-
+matchOrder.noMatchSelected=선택된 경기가 없음
+matchOrder.comparedTo=비교:
+matchOrder.previousPrediction=이전 예측
+matchOrder.AddMatchManually=수동으로 경기 추가
+matchOrder.swapPositions=포지션 교체
+matchOrder.options=옵션
+matchOrder.staminaDiscount=체력 감소
+matchOrder.summary=요약
 
 #Skills
 Playmaking=플레이메이킹
@@ -596,41 +596,41 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+match.pos.kp=골키퍼
+match.pos.kp.abbr=KP
+match.pos.lb=레프트 백
+match.pos.lb.abbr=LB
+match.pos.lcd=왼쪽 중앙 수비수
+match.pos.lcd.abbr=LCD
+match.pos.mcd=중앙 중앙 수비수
+match.pos.mcd.abbr=MCD
+match.pos.rcd=오른쪽 중앙 수비수
+match.pos.rcd.abbr=RCD
+match.pos.rb=라이트 백
+match.pos.rb.abbr=RB
+match.pos.lw=왼쪽 윙어
+match.pos.lw.abbr=LW
+match.pos.lcm=왼쪽 중앙 미드필드
+match.pos.lcm.abbr=LCM
+match.pos.mcm=중앙 중앙 미드필드
+match.pos.mcm.abbr=MCM
+match.pos.rcm=오른쪽 중앙 미드필드
+match.pos.rcm.abbr=RCM
+match.pos.rw=오른쪽 윙어
+match.pos.rw.abbr=RW
+match.pos.lf=왼쪽 포워드
+match.pos.lf.abbr=LF
+match.pos.mf=중앙 포워드
+match.pos.mf.abbr=MF
+match.pos.rf=오른쪽 포워드
+match.pos.rf.abbr=RF
 
+match.role.setPieces=세트 피스 전담
+match.role.setPieces.abbr=SP
+match.role.captain=주장
+match.role.captain.abbr=Capt.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+match.player.unknown=알려지지 않은 선수
 
 General=일반
 
@@ -640,8 +640,8 @@ PlayerNumber.abbr=#
 TSI=Total Skill Index
 TSI.abbr=TSI
 
-
-
+CanBePromotedIn=승격할 수 있음
+CanBePromotedIn.abbr=Prom
 
 Personality=성격
 Agreeability=호감도
@@ -681,13 +681,13 @@ Last_match=최근 경기
 Last_match.abbr=Last
 Last_stars=최근 별점
 Last_stars.abbr=Rt
-
-
-
-
+Last_stars_EndOfGame=최근 경기 종료 시 별점
+Last_stars_EndOfGame.abbr=Rt
+Last_stars_decline=최근 별점 감소
+Last_stars_decline.abbr=Diff
 Last_position=최근 포지션
 Last_position.abbr=Pos
-
+Last_match_played_as=최근 경기에서 %2로써 %1분 뛰었음.
 
 Bruised=타박상
 Bruised.abbr=Bru
@@ -814,14 +814,14 @@ CopyYouth.fixturesSource=fixtures 소스 복사
 CopyYouth.fixturesSource.copied=fixtures 소스를 복사했습니다.
 CopyYouth.goto=%s으로 가기
 
-
-
-
-
-
-
-
-
+MatchReportFormat.MatchReport=경기 보고서
+MatchReportFormat.lineup=라인업
+MatchReportFormat.kickOff=킥 오프
+MatchReportFormat.halfTime=하프 타임
+MatchReportFormat.fullTime=풀타임
+MatchReportFormat.extraTime=추가 시간
+MatchReportFormat.penaltyShootOut=승부차기
+MatchReportFormat.result=결과
 
 CopySelected.desc=Ctrl + C로 구역 복사.
 SpecialPaste.desc=Shift + Left Click으로 붙여넣기.
@@ -956,18 +956,18 @@ HTMSPrediction.prediction=예측된 결과
 HTMSPrediction.winDrawLoss=승리/무승부/패배
 HTMSPrediction.title=HTMS에 의한 경기 분석
 HTMSPrediction.changePrediction=변경 예측
-
+HTMSPrediction.team=팀
 
 #htms table of statistical truth
-
-
-
-
-
-
-
-
-
+truthTable.table=통계적 진리의 HTMS 테이블
+truthTable.predicted_position=#
+truthTable.name=팀
+truthTable.real_position=실제 pos.
+truthTable.real_points=실제 포인트
+truthTable.predicted_points=예측 포인트
+truthTable.difference=±
+truthTable.notAvailableYet=아직 데이터를 사용할 수 없습니다. 필요한 데이터를 생생하기 위해 HTMS로 가세요
+truthTable.tableAtHTMS=이 테이블은 HTMS 웹페이지의 표입니다
 
 # HTMSPoints
 HTMSPoints=HTMS Points:
@@ -1018,7 +1018,7 @@ LocalTime.local=현지 시간
 LocalTime.local.title=현지 시간대. Hattrick 시간으로 전환하려면 시계를 클릭하세요.
 
 # Links
-
+Links.feeds=링크 리스트 피드(줄 바꿈에 의해 구분)
 
 #actions
 Copy=복사
@@ -1070,7 +1070,7 @@ oauth.link=chpp.hattrick.org으로부터 확인 코드 얻기
 oauth.success=폭스트릭을 성공적으로 인증하였습니다! 폭스트릭이 제공하는 확장된 정보를 보기 위해서 현재 페이지를 다시 불러오세요.
 
 api.failure=Hattrick으로 데이터 접근 실패. 폭스트릭이 당신의 팀 데이터를 접근하기위해 인증할 필요가 있습니다. 만약에 인증했다면 네트워크 연결을 확인하거나 다시 시도하세요.
-
+api.serverUnavailable=서버 사용불가
 
 exception.error=에러 %s
 
@@ -1109,11 +1109,11 @@ tab.about=대하여
 tab.changes=변경사항
 tab.help=도움말
 
-
-
-
-
-
+foxtrick.prefs.setup=설정
+foxtrick.prefs.setup.desc=폭스트릭이 감지한 설정입니다. 올바르지 않으면 {신고 해주세요}.
+foxtrick.prefs.setup.locale=지역
+foxtrick.prefs.setup.dateFormat=날짜 양식
+foxtrick.prefs.setup.country=국가
 
 foxtrick.prefs.captionCleanupBranch=환경설정 저장
 foxtrick.prefs.captionLoadSavePrefs=환경설정 내보내기 또는 가져오기
@@ -1148,7 +1148,7 @@ link.nightlyOpera=Opera를 위한 개발 빌드
 link.nightlySafari=Safari를 위한 개발 빌드
 link.recentChanges=최근 변경사항
 
-
+module.link=당신은 현재 토론장에서 직접 여기에 이 링크를 복사 붙여넣기할 수 있습니다.
 
 foxtrick.showReleaseNotes=모든 업데이트 후에 배포 노트 나타내기
 foxtrick.versionReleaseNotes=배포 노트 보이기:
