--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -250,7 +250,7 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=给球队链接添加 TeamPopupLinks
 foxtrick.TeamPopupLinks.UserLinks.desc=给经理链接添加 TeamPopupLinks
 foxtrick.TeamPopupLinks.Manager.desc=经理 (仅限于球队链接)
 foxtrick.TeamPopupLinks.Team.desc=球队 (仅限于经理链接)
-
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Alltid 页面
 foxtrick.TeamPopupLinks.Matches.desc=比赛
 foxtrick.TeamPopupLinks.Players.desc=球员
 foxtrick.TeamPopupLinks.last_5_ips.desc=最近5次登陆
@@ -743,7 +743,7 @@ copy.table=复制表格 (HT-ML 格式)
 #teampopups
 Manager=经理
 Team=球队
-
+TeamAtAlltid=Alltid 页面
 Matches=比赛
 Players=球员
 last_5_ips=最近5次登陆
@@ -983,7 +983,7 @@ foxtrick.prefs.basicPreferences=基本首选项
 foxtrick.prefs.captionHTLanguage=语言
 foxtrick.prefs.captionHTDateformat=日期格式
 foxtrick.prefs.captionHTCountry=国家
-
+foxtrick.prefs.captionShowOnStatusBar=状态栏图标
 foxtrick.prefs.captionCleanupBranch=清理首选项
 foxtrick.prefs.captionLoadSavePrefs=导出或导入首选项
 foxtrick.prefs.labelCleanupBranch=重置首选项 (仅还原首选项, 不还原个人设置)
