--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -35,9 +35,9 @@ foxtrick.Ratings.HatStatsDetailed.desc=HatStats (مفصلة)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats منفصلة لكل تقييم
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
-
-
-
+foxtrick.Ratings.VnukStats=VnukStats
+foxtrick.Ratings.HTitaVal=HTitaVal
+foxtrick.Ratings.GardierStats=GardierStats
 foxtrick.BookmarkAdjust.desc=تغيير الأيقونة المرتبطة إلى أحد العلامات في التعليق على العلامة بين قوسين مثل [سماوي] سوف يظهر اللون السماوي. بقية القيم المتاحة هي: أكوا وباء وأسود وأزرق وبني وسماوي وبنفسجي غامق وأخضر وفكري وأزرق فاتح وأخضر فاتح وبرتقالي ووردي وبنفسجي وأحمر وأبيض وأصفر
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=يقوم بإظهار قيمة المتوسط في صفحة مقارنة الإنتقالات
@@ -251,7 +251,7 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add popups to manager links
 foxtrick.TeamPopupLinks.Manager.desc=Manager (for team links only)
 foxtrick.TeamPopupLinks.Team.desc=Team (for manager links only)
-
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Team page at Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Matches
 foxtrick.TeamPopupLinks.Players.desc=Players
 foxtrick.TeamPopupLinks.last_5_ips.desc=5 latest logins
@@ -744,7 +744,7 @@ copy.table=نسخ الجدول بصيغة HT-ML
 #teampopups
 Manager=المدير الفني
 Team=الفريق
-
+TeamAtAlltid=الفريق في Alltid
 Matches=المباريات
 Players=اللاعبين
 last_5_ips=آخر 5 تسجيلات دخول
