--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -27,7 +27,7 @@ foxtrick.MoveLinks.desc=Liga und Länderflagge im Postingkopf anzeigen
 foxtrick.AttVsDef.desc=Grafischen Teamvergleich im Spielbericht anzeigen
 foxtrick.AttVsDef.oldstyle.desc=Alter Stil
 foxtrick.AttVsDef.newstyle.desc=Neuer Stil
-
+foxtrick.AttVsDef.oldstyleifkseperated.desc=Alter Style (ind. Freistösse separat)
 #Ratings
 foxtrick.Ratings.desc=Anzeige diverser Ratings im Spielbericht
 foxtrick.Ratings.HatStats.desc=HatStats
@@ -35,9 +35,9 @@ foxtrick.Ratings.HatStatsDetailed.desc=HatStats (Details)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats aufgeschlüsselt nach Rating
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
-
-
-
+foxtrick.Ratings.VnukStats=VnukStats
+foxtrick.Ratings.HTitaVal=HTitaVal
+foxtrick.Ratings.GardierStats=GardierStats
 foxtrick.BookmarkAdjust.desc=Icons in Verbindung mit einem Bookmark-Eintrag in den Bookmarks-Kommentaren können wie folgt hinzugefügt werden: z.B: [cyan] - zeigt ein cyanfarbenes Icon an. Mögliche Werte: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Zeigt den Medianpreis im Transfervergleich an
@@ -135,7 +135,7 @@ foxtrick.ForumLastPost.lastpage.desc=Springe zur letzten Seite, nicht zum letzte
 foxtrick.MatchPlayerColouring.desc=Spieler im Spielbericht farblich hervorheben
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
 foxtrick.MatchReportFormat.desc=Formatierung des Spielberichts in einzelne Abschnitte. Einstellungen zum Format können untenstehend vorgenommen werden.
-
+foxtrick.MatchReportFormat.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
 foxtrick.ForumRedirManagerToTeam.desc=Weiterleitung auf die Vereinsseite von den Managerlinks im Forum
 foxtrick.ManagerButtons.desc=Hinzufügen oder verändern der Managerbuttons auf Team- und Managerseiten
 foxtrick.ManagerButtons.GuestBook.desc=Hinzufügen von Links 'Gästebuch' auf der Manager-Seite und der Vereinsseite
@@ -251,7 +251,7 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=TeamPopupLinks den Vereinslinks zufügen
 foxtrick.TeamPopupLinks.UserLinks.desc=TeamPopupLinks den Managerlinks zufügen
 foxtrick.TeamPopupLinks.Manager.desc=Link zum Manager (nur für Vereinslinks)
 foxtrick.TeamPopupLinks.Team.desc=Link zum Verein (nur für Managerlinks)
-
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link zur Vereinsübersicht auf Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Link zu den aktuellen Spielen
 foxtrick.TeamPopupLinks.Players.desc=Link zur Spielerübersicht
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link zu den letzten 5 Logins
@@ -744,7 +744,7 @@ copy.table=Kopiere Tabelle in HT-ML
 #teampopups
 Manager=Manager
 Team=Verein
-
+TeamAtAlltid=Team bei Alltid
 Matches=Spielplan
 Players=Spieler
 last_5_ips=Letzte 5 Logins
@@ -812,8 +812,8 @@ ShowFriendlyBooked.ShowFriendlies=Freundschaftspiele anzeigen
 
 
 # TransferSearchResultFilters
-
-
+TransferSearchResultFilters.hide_bruised=Verberge Angeschlagene
+TransferSearchResultFilters.hide_injured=Verberge Verletzte
 TransferSearchResultFilters.hideSuspended=Verberge Gesperrte
 TransferSearchResultFilters.days=Tage:
 
@@ -877,7 +877,7 @@ TickerAlert.sound=Hinweiston
 
 # tickers
 ticker.type.welcome=Willkommen
-
+ticker.type.supporter.desc=Login von Supportern
 ticker.type.forum=Forenantworten an mich
 ticker.type.transfer=Transfermarket
 ticker.type.challenge=Forderungen
@@ -921,7 +921,7 @@ button.save=Speichern
 button.go=Los!
 button.add=Hinzufügen
 button.remove=Entfernen
-
+nutton.top=Nach oben
 button.authorize=Autorisieren
 button.export=Exportiere
 button.import=Importiere
@@ -991,7 +991,7 @@ foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
 foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
 foxtrick.prefs.oauth.delete=OAuth Token/Secret der gewählten Vereinsid löschen.
 # NOTE - please preserve the braces, inner content will be converted to link
-
+foxtrick.prefs.labelDeleteToken=Gilt nur für diesen Browser. Um FoxTricks Zugang für einen Verein vollständig zu löschen, benutze Hattricks {CHPP-Management}. 
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
 foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
 foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
